fix transaksi
